// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@@INIT 1`] = `
Object {
  "entities": Object {
    "entityLeaf": Object {
      "index": Array [
        1,
        2,
        3,
      ],
    },
  },
  "ui": Object {
    "uiLeaf": Object {
      "processingEntities": Array [],
    },
  },
}
`;

exports[`START_PROCESSING_ENTITY 1`] = `
Object {
  "entities": Object {
    "entityLeaf": Object {
      "index": Array [
        1,
        2,
        3,
      ],
    },
  },
  "ui": Object {
    "uiLeaf": Object {
      "processingEntities": Array [
        1,
      ],
    },
  },
}
`;

exports[`STOP_PROCESSING_ENTITY 1`] = `
Object {
  "entities": Object {
    "entityLeaf": Object {
      "index": Array [
        3,
        2,
      ],
    },
  },
  "ui": Object {
    "uiLeaf": Object {
      "processingEntities": Array [],
    },
  },
}
`;

exports[`redux-tree throws on invalid keypath in an object in an array 1`] = `
"
    \\"action.INVALID_KEYPATH\\" was dispatched.
    Trying to update state at keypath [\\"entities\\",\\"invalidLeaf\\"] but resolved value is undefined.
    Most likely you misspelled one of the keys in the leaf keypath.
    Re-check your action handlers for this action.

    Keypath: [\\"entities\\",\\"invalidLeaf\\"]
    Action: {\\"type\\":\\"INVALID_KEYPATH\\"}
  "
`;

exports[`redux-tree throws on undefined state returned form action handler as a function in an array 1`] = `
"
    Reducer at keypath [\\"ui\\",\\"uiLeaf\\"] returned undefined.
    To ignore an action, you must explicitly return the previous state.
    If you want this reducer to hold no value, you can return null instead of undefined.

    Keypath: [\\"ui\\",\\"uiLeaf\\"]
    Action: {\\"type\\":\\"UNDEFINED_STATE\\"}
  "
`;

exports[`redux-tree throws on undefined state returned form action handler as an object in an array 1`] = `
"
    Reducer at keypath [\\"entities\\",\\"entityLeaf\\"] returned undefined.
    To ignore an action, you must explicitly return the previous state.
    If you want this reducer to hold no value, you can return null instead of undefined.

    Keypath: [\\"entities\\",\\"entityLeaf\\"]
    Action: {\\"type\\":\\"UNDEFINED_STATE\\"}
  "
`;
